Fixed background image scaling on mobile. Changed label color to white.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,11 @@ body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
+  height: 100vh;
+}
+
+label {
+  color: #FFFFFF;
 }
 
 #page {
